# rss-reader

./: .gitignore  Cargo.toml  Dioxus.toml  diesel.toml  input.css  package-lock.json  package.json  test_feeds.txt
assets/styling/: main.css
migrations/2025-04-07-204342_create_feeds/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/components/: add_feed.rs  mod.rs  reader.rs  refresh_feed_button.rs  side_nav_item.rs
