[package]
name = "rss_reader"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
reqwest = "0.12.15"
rss = "2.0.12"
libsqlite3-sys = { version = "0.32", features = ["bundled"] }
diesel = { version = "2.2.9", features = ["sqlite", "chrono"]}
url = "2.5.4"
anyhow = "1.0.97"
chrono = "0.4"
uuid = { version = "1.16.0", features = ["v4"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
